Pinning google/go-github dependency to v14.0.0. New version (v15.0.0) has some breaking changes.

--- a/glide.yaml
+++ b/glide.yaml
@@ -1,6 +1,7 @@
 package: github.com/samsung-cnct/container-technical-on-boarding
 import:
 - package: github.com/google/go-github
+  version: ^14.0.0
   subpackages:
   - github
 - package: github.com/masterminds/semver
