pinning go-github to version 14.0.0

--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -45,6 +45,10 @@
   name = "github.com/satori/go.uuid"
   version = "1.1.0"
 
+[[constraint]]
+  name = "github.com/google/go-github"
+  version = "14.0.0"
+
 [prune]
   go-tests = true
   unused-packages = true
