Allow environment var override for GitHub endpoint URL. (#25)
* Allow environment var override for GitHub endpoint URL.

Commonly users of GitHub will rely on GitHub's hosted `github.com` API
to interface with publicly accessible services and repositories. In
these cases, the default configuration of GitHub's client library will
be quite sufficient.

Enterprise customers of GitHub will often run GitHub on-premise, in
their own datacenters. In these cases, GitHub's API is running on a
different domain, e.g. `github.org.internal`, and the client library
used in this project will need its configuration updated to communicate
with that service (endpoint).

This patch enables enterprise customers to use their internally operated
GitHub services by overriding it at run-time, using environment
variables, like so:

```shell
ONBOARD_CLIENT_ENDPOINT=https://github.org.internal/api/v3/ revel run github.com/samsung-cnct/container-technical-on-boarding
```

Effectively the default is:

```shell
ONBOARD_CLIENT_ENDPOINT=https://api.github.com revel run github.com/samsung-cnct/container-technical-on-boarding
```

* Correctly handle non-erroneous URLs

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -5,6 +5,7 @@
 
 onboard.client.id     = ${ONBOARD_CLIENT_ID}
 onboard.client.secret = ${ONBOARD_CLIENT_SECRET}
+onboard.client.endpoint = ${ONBOARD_CLIENT_ENDPOINT}
 onboard.org           = ${ONBOARD_ORG}
 onboard.repo          = ${ONBOARD_REPO}
 onboard.tasks.file    = ${ONBOARD_TASKS_FILE}
