Avoid hardcoded version in pipeline & chart template
Rationale:

- The `revel` configuration supports resolution of environment variables instead of direct templating.
- The CI process currently already provides a `BUILD` variables that represents the commit ID.
- The chart can provide environment variables that express the version at run-time.
- The CI environment already provides a Chart Version, which is (in this model) tightly coupled to the container version.
- The `.versionfile` is the sanctioned, germane representation of the project version under this CI model, and it can be copied in as a plain file to the Docker image.

Effect:

- Commit ID is composed into the Docker image as environment var
- Version is provided as environment variable via Chart

--- a/charts/technical-on-boarding/templates/deployment.yaml
+++ b/charts/technical-on-boarding/templates/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: {{ template "fullname" . }}
-        image: "{{.Values.image}}"
+        image: "{{.Values.image}}" 
         imagePullPolicy: "Always"
         ports:
         - containerPort: 9000
@@ -29,6 +29,8 @@ spec:
           initialDelaySeconds: 15
           timeoutSeconds: 1
         env:
+        - name: VERSION
+          value: {{ .Chart.Version }} 
         - name: ONBOARD_CLIENT_ID
           valueFrom:
             secretKeyRef:
