--- a/rootfs/technical-on-boarding-container/Dockerfile
+++ b/rootfs/technical-on-boarding-container/Dockerfile
@@ -1,7 +1,9 @@
 FROM golang:1.9
 
-ARG VERSION
+
 ARG BUILD
+
+ENV BUILD=${BUILD}
 ENV PACKAGE_PATH "/go/src/github.com/samsung-cnct/container-technical-on-boarding"
 ENV ONBOARD_TASKS_FILE "/workload/onboarding-issues.yaml"
 
@@ -9,12 +11,9 @@ RUN apt-get -qq update && apt-get install -y -q build-essential
 
 WORKDIR ${PACKAGE_PATH}
 COPY . ${PACKAGE_PATH}
+COPY .versionfile /
 
-# set version
-RUN sed -i -- 's/${VERSION}/'"$VERSION"'/g' conf/app.conf && \
-	  sed -i -- 's/${BUILD}/'"$BUILD"'/g' conf/app.conf
-
-RUN make all
+RUN make build
 RUN mkdir /workload && \
     cp -v ${PACKAGE_PATH}/onboarding-issues.yaml ${ONBOARD_TASKS_FILE}
 
