--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -2,8 +2,6 @@ type: chart
 rootfs:
   - image: samsung_cnct/technical-on-boarding-container
     buildArgs: 
-      - arg: VERSION
-        value: 1.1.7
       - arg: BUILD
         env: GIT_COMMIT
     context: technical-on-boarding-container
@@ -23,6 +21,9 @@ configs:
       values:
         - key: ingress
           value: "false"  
+
+stage:
+  deploy: true
 prod: 
   doDeploy: none
 
