--- a/onboarding-issues.yaml
+++ b/onboarding-issues.yaml
@@ -93,6 +93,20 @@ tasks:
 
       [1]: https://kubernetes.io/docs/tasks/run-application/run-single-instance-stateful-application/
 
+
+  - title: Packaging Kubernetes Apps with Helm
+    assignee: *new_hire
+    tags:
+      - Application Developer
+    description: |
+      Helm's own documentation is quite good. A few starting points:
+
+      - [ ] [Helm quickstart](https://docs.helm.sh/using_helm/#quickstart-guide)
+      - [ ] [Chart development](https://docs.helm.sh/developing_charts/#charts)
+      - [ ] [Chart templating](https://docs.helm.sh/chart_template_guide/#the-chart-template-developer-s-guide)
+
+      Application developers and operators will benefit from understanding Helm in depth, so reading further into the Helm docs is advisable.
+
   - title: Read Cloud Native Computing Team General Confluence Page
     assignee: *new_hire
     description: |
